--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 
 .App-logo {
   height: 40vmin;
@@ -13,7 +13,7 @@
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -23,7 +23,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+ */
 .App-link {
   color: #61dafb;
 }
@@ -35,4 +35,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.credit-card {
+  display: flex;
+  justify-content: space-around;
 }
